--- a/.travis.yml
+++ b/.travis.yml
@@ -61,11 +61,11 @@ script:
 after_success:
   - cd dist
   - ls -lh
-  - wget -c https://github.com/probonopd/uploadtool/raw/master/upload.sh
+  - wget -c https://github.com/probonopd/uploadtool/raw/master/upload.sh -O /tmp/upload.sh
   # make sure only pushes to rewrite create a new release, otherwise pretend PR and upload to transfer.sh
   - if [ "$TRAVIS_BRANCH" != "rewrite" ]; then export TRAVIS_EVENT_TYPE=pull_request; fi
   # TODO: fix this dirty hack:
-  - find -type f -iname '*.AppImage*' -print0 | xargs -0 bash upload.sh
+  - find -type f -iname '*.AppImage*' -print0 | xargs -0 bash /tmp/upload.sh
 
 notifications:
   email: false
