--- a/.travis.yml
+++ b/.travis.yml
@@ -59,6 +59,7 @@ script:
   - ./scripts/ci/build-installers.sh -o $HOST_OS -r $TARGET_ARCH
 
 after_success:
+  - find -type f -iname '*.zsync'
   - cd dist
   - ls -lh
   - find -type f -iname '*etcher*' -maxdepth 1
