--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,7 @@ after_success:
   - if [ "$TRAVIS_BRANCH" != "master" ]; then export TRAVIS_EVENT_TYPE=pull_request; fi
   # TODO: fix this dirty hack:
   # work around permissions issues
-  - find $(pwd) -type f -iname '*etcher*.[AppImage|deb|tar|rpm]*' -maxdepth 1 -print0 | (cd /tmp && xargs -0 bash upload.sh)
+  - find $(pwd) -type f -iname '*etcher*.[AppImage|zsync|deb|tar|rpm]*' -maxdepth 1 -print0 | (cd /tmp && xargs -0 bash upload.sh)
 
 notifications:
   email: false
