Conversion to Better Etcher

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "etcher",
-  "displayName": "Etcher",
+  "name": "better-etcher",
+  "displayName": "Better Etcher",
   "version": "1.4.1",
   "packageType": "local",
   "updates": {
@@ -10,12 +10,12 @@
   },
   "main": "lib/start.js",
   "description": "Flash OS images to SD cards and USB drives, safely and easily.",
-  "productDescription": "Etcher is a powerful OS image flasher built with web technologies to ensure flashing an SDCard or USB drive is a pleasant and safe experience. It protects you from accidentally writing to your hard-drives, ensures every byte of data was written correctly and much more.",
-  "homepage": "https://github.com/resin-io/etcher",
+  "productDescription": "Better Etcher is a powerful OS image flasher built with web technologies to ensure flashing an SDCard or USB drive is a pleasant and safe experience. It protects you from accidentally writing to your hard-drives, ensures every byte of data was written correctly and much more.",
+  "homepage": "https://github.com/TheAssassin/better-etcher",
   "gypfile": true,
   "repository": {
     "type": "git",
-    "url": "git@github.com:resin-io/etcher.git"
+    "url": "git@github.com:TheAssassin/better-etcher.git"
   },
   "scripts": {
     "test": "make lint test sanity-checks",
@@ -29,7 +29,7 @@
     "concourse-test-electron": "npm test",
     "concourse-test-node-cli": "make lint-js lint-cpp lint-spell test-cli"
   },
-  "author": "Resin Inc. <hello@etcher.io>",
+  "author": "TheAssassin <theassassin@users.noreply.github.com>",
   "license": "Apache-2.0",
   "platformSpecificDependencies": [
     "7zip-bin-mac",
