Try to fix build issues

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "better-etcher",
-  "displayName": "Better Etcher",
+  "displayName": "Better_Etcher",
   "version": "1.4.1",
   "packageType": "local",
   "updates": {
