--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,6 +1,6 @@
-appId: com.github.theassassin.etcher
+appId: com.github.theassassin.better-etcher
 copyright: Copyright 2016-2018 Resinio Ltd, 2018 TheAssassin
-productName: Better Etcher
+productName: Better_Etcher
 npmRebuild: false
 nodeGypRebuild: false
 publish: null
